[gd_scene load_steps=13 format=3 uid="uid://ctgbbjxlb5sel"]

[ext_resource type="Script" path="res://Scripts/Interactables/Chest_behavior.gd" id="1_hjfkk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2lsq1"]
size = Vector3(1, 0.53, 0.67)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tkrvr"]
resource_name = "Crates_and_Barrels_2"
cull_mode = 2
roughness = 0.0

[sub_resource type="ArrayMesh" id="ArrayMesh_6d44i"]
_surfaces = [{
"aabb": AABB(-0.475263, 0, -0.360597, 0.950526, 0.509745, 0.693291),
"format": 34896613377,
"index_count": 180,
"index_data": PackedByteArray(0, 0, 9, 0, 8, 0, 0, 0, 2, 0, 9, 0, 2, 0, 10, 0, 9, 0, 2, 0, 6, 0, 10, 0, 6, 0, 11, 0, 10, 0, 6, 0, 4, 0, 11, 0, 4, 0, 8, 0, 11, 0, 4, 0, 0, 0, 8, 0, 2, 0, 4, 0, 6, 0, 2, 0, 0, 0, 4, 0, 5, 0, 14, 0, 7, 0, 5, 0, 15, 0, 14, 0, 1, 0, 9, 0, 3, 0, 1, 0, 8, 0, 9, 0, 3, 0, 10, 0, 7, 0, 3, 0, 9, 0, 10, 0, 7, 0, 11, 0, 5, 0, 7, 0, 10, 0, 11, 0, 5, 0, 8, 0, 1, 0, 5, 0, 11, 0, 8, 0, 14, 0, 12, 0, 13, 0, 14, 0, 15, 0, 12, 0, 3, 0, 12, 0, 1, 0, 3, 0, 13, 0, 12, 0, 1, 0, 15, 0, 5, 0, 1, 0, 12, 0, 15, 0, 7, 0, 13, 0, 3, 0, 7, 0, 14, 0, 13, 0, 16, 0, 19, 0, 17, 0, 16, 0, 18, 0, 19, 0, 18, 0, 21, 0, 19, 0, 18, 0, 20, 0, 21, 0, 20, 0, 23, 0, 21, 0, 20, 0, 22, 0, 23, 0, 21, 0, 17, 0, 19, 0, 17, 0, 23, 0, 25, 0, 17, 0, 21, 0, 23, 0, 22, 0, 25, 0, 23, 0, 22, 0, 24, 0, 25, 0, 24, 0, 17, 0, 25, 0, 24, 0, 16, 0, 17, 0, 24, 0, 18, 0, 16, 0, 18, 0, 22, 0, 20, 0, 18, 0, 24, 0, 22, 0, 26, 0, 29, 0, 27, 0, 26, 0, 28, 0, 29, 0, 28, 0, 31, 0, 29, 0, 28, 0, 30, 0, 31, 0, 30, 0, 33, 0, 31, 0, 30, 0, 32, 0, 33, 0, 31, 0, 27, 0, 29, 0, 27, 0, 33, 0, 35, 0, 27, 0, 31, 0, 33, 0, 32, 0, 35, 0, 33, 0, 32, 0, 34, 0, 35, 0, 34, 0, 27, 0, 35, 0, 34, 0, 26, 0, 27, 0, 34, 0, 28, 0, 26, 0, 28, 0, 32, 0, 30, 0, 28, 0, 34, 0, 32, 0),
"name": "Crates_and_Barrels_2",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 0, 0, 33, 13, 173, 238, 253, 237, 0, 0, 0, 0, 0, 0, 78, 10, 0, 0, 33, 13, 173, 238, 78, 28, 0, 0, 255, 255, 0, 0, 254, 255, 0, 0, 221, 242, 173, 238, 253, 237, 0, 0, 255, 255, 0, 0, 78, 10, 0, 0, 221, 242, 173, 238, 78, 28, 0, 0, 0, 0, 173, 238, 254, 255, 0, 0, 0, 0, 173, 238, 78, 10, 0, 0, 255, 255, 173, 238, 78, 10, 0, 0, 255, 255, 173, 238, 254, 255, 0, 0, 33, 13, 142, 55, 253, 237, 0, 0, 33, 13, 142, 55, 78, 28, 0, 0, 221, 242, 142, 55, 78, 28, 0, 0, 221, 242, 142, 55, 253, 237, 0, 0, 95, 213, 229, 255, 68, 5, 0, 0, 212, 241, 229, 255, 68, 5, 0, 0, 95, 213, 190, 234, 0, 0, 0, 0, 212, 241, 190, 234, 0, 0, 0, 0, 95, 213, 198, 221, 41, 13, 0, 0, 212, 241, 198, 221, 41, 13, 0, 0, 95, 213, 232, 234, 144, 26, 0, 0, 212, 241, 232, 234, 144, 26, 0, 0, 95, 213, 255, 255, 175, 21, 0, 0, 212, 241, 255, 255, 175, 21, 0, 0, 42, 14, 229, 255, 68, 5, 0, 0, 159, 42, 229, 255, 68, 5, 0, 0, 42, 14, 190, 234, 0, 0, 0, 0, 159, 42, 190, 234, 0, 0, 0, 0, 42, 14, 198, 221, 41, 13, 0, 0, 159, 42, 198, 221, 41, 13, 0, 0, 42, 14, 232, 234, 144, 26, 0, 0, 159, 42, 232, 234, 144, 26, 0, 0, 42, 14, 255, 255, 175, 21, 0, 0, 159, 42, 255, 255, 175, 21, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_1m1fe"]
resource_name = "chest_model_Cube_007"
_surfaces = [{
"aabb": AABB(-0.475263, 0, -0.360597, 0.950526, 0.509745, 0.693291),
"attribute_data": PackedByteArray(132, 1, 250, 131, 240, 147, 166, 246, 140, 252, 44, 254, 232, 252, 163, 148, 182, 138, 7, 135, 89, 131, 163, 148, 152, 1, 21, 253, 43, 224, 166, 246, 155, 130, 44, 254, 162, 180, 163, 148, 187, 245, 7, 135, 162, 180, 163, 148, 132, 1, 21, 253, 240, 147, 191, 137, 235, 130, 44, 254, 213, 180, 163, 148, 182, 138, 182, 248, 213, 180, 163, 148, 152, 1, 250, 131, 43, 224, 191, 137, 220, 252, 44, 254, 182, 252, 163, 148, 187, 245, 182, 248, 140, 131, 163, 148, 206, 124, 250, 131, 135, 129, 136, 128, 140, 252, 226, 130, 225, 124, 21, 253, 235, 254, 136, 128, 155, 130, 226, 130, 226, 124, 250, 131, 235, 254, 53, 255, 220, 252, 226, 130, 206, 124, 21, 253, 135, 129, 53, 255, 235, 130, 226, 130, 232, 252, 104, 231, 248, 231, 149, 253, 89, 131, 104, 231, 162, 180, 104, 231, 92, 150, 149, 253, 162, 180, 104, 231, 182, 252, 104, 231, 92, 150, 253, 130, 140, 131, 104, 231, 213, 180, 104, 231, 248, 231, 253, 130, 213, 180, 104, 231, 201, 5, 209, 187, 114, 75, 207, 187, 113, 63, 94, 130, 201, 5, 226, 195, 114, 75, 224, 195, 130, 63, 94, 130, 233, 28, 209, 187, 10, 52, 209, 187, 71, 58, 151, 128, 233, 28, 226, 195, 10, 52, 226, 195, 172, 68, 151, 128, 239, 74, 209, 187, 14, 29, 224, 195, 22, 55, 245, 132, 239, 74, 226, 195, 14, 29, 207, 187, 221, 71, 245, 132, 185, 120, 226, 195, 201, 5, 224, 195, 71, 58, 109, 137, 185, 120, 209, 187, 201, 5, 207, 187, 172, 68, 109, 137, 212, 97, 226, 195, 82, 52, 207, 187, 113, 63, 212, 135, 212, 97, 209, 187, 82, 52, 224, 195, 130, 63, 212, 135, 233, 28, 209, 187, 146, 98, 207, 187, 95, 63, 94, 130, 233, 28, 226, 195, 146, 98, 224, 195, 113, 63, 94, 130, 10, 52, 209, 187, 239, 74, 209, 187, 53, 58, 151, 128, 10, 52, 226, 195, 239, 74, 226, 195, 155, 68, 151, 128, 212, 97, 209, 187, 82, 52, 224, 195, 4, 55, 245, 132, 212, 97, 226, 195, 82, 52, 207, 187, 204, 71, 245, 132, 119, 121, 224, 195, 14, 29, 224, 195, 53, 58, 109, 137, 119, 121, 207, 187, 14, 29, 207, 187, 155, 68, 109, 137, 146, 98, 224, 195, 114, 75, 207, 187, 95, 63, 212, 135, 146, 98, 207, 187, 114, 75, 224, 195, 113, 63, 212, 135),
"format": 34896613399,
"index_count": 180,
"index_data": PackedByteArray(2, 0, 29, 0, 26, 0, 2, 0, 8, 0, 29, 0, 6, 0, 30, 0, 27, 0, 6, 0, 18, 0, 30, 0, 20, 0, 35, 0, 32, 0, 20, 0, 14, 0, 35, 0, 12, 0, 24, 0, 33, 0, 12, 0, 0, 0, 24, 0, 7, 0, 13, 0, 19, 0, 7, 0, 1, 0, 13, 0, 17, 0, 44, 0, 23, 0, 17, 0, 47, 0, 44, 0, 4, 0, 28, 0, 10, 0, 4, 0, 25, 0, 28, 0, 10, 0, 31, 0, 22, 0, 10, 0, 28, 0, 31, 0, 22, 0, 34, 0, 16, 0, 22, 0, 31, 0, 34, 0, 16, 0, 25, 0, 4, 0, 16, 0, 34, 0, 25, 0, 43, 0, 37, 0, 40, 0, 43, 0, 46, 0, 37, 0, 11, 0, 38, 0, 5, 0, 11, 0, 41, 0, 38, 0, 3, 0, 45, 0, 15, 0, 3, 0, 36, 0, 45, 0, 21, 0, 39, 0, 9, 0, 21, 0, 42, 0, 39, 0, 48, 0, 57, 0, 51, 0, 48, 0, 54, 0, 57, 0, 55, 0, 63, 0, 58, 0, 55, 0, 60, 0, 63, 0, 61, 0, 70, 0, 64, 0, 61, 0, 67, 0, 70, 0, 65, 0, 53, 0, 59, 0, 53, 0, 71, 0, 77, 0, 53, 0, 65, 0, 71, 0, 66, 0, 75, 0, 69, 0, 66, 0, 72, 0, 75, 0, 73, 0, 52, 0, 76, 0, 73, 0, 49, 0, 52, 0, 74, 0, 56, 0, 50, 0, 56, 0, 68, 0, 62, 0, 56, 0, 74, 0, 68, 0, 78, 0, 87, 0, 81, 0, 78, 0, 84, 0, 87, 0, 85, 0, 93, 0, 88, 0, 85, 0, 90, 0, 93, 0, 91, 0, 100, 0, 94, 0, 91, 0, 97, 0, 100, 0, 95, 0, 83, 0, 89, 0, 83, 0, 101, 0, 107, 0, 83, 0, 95, 0, 101, 0, 96, 0, 105, 0, 99, 0, 96, 0, 102, 0, 105, 0, 103, 0, 82, 0, 106, 0, 103, 0, 79, 0, 82, 0, 104, 0, 86, 0, 80, 0, 86, 0, 98, 0, 92, 0, 86, 0, 104, 0, 98, 0),
"material": SubResource("StandardMaterial3D_tkrvr"),
"name": "Crates_and_Barrels_2",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 108,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 255, 191, 0, 0, 0, 0, 254, 255, 84, 213, 0, 0, 0, 0, 254, 255, 255, 191, 33, 13, 173, 238, 253, 237, 255, 255, 33, 13, 173, 238, 253, 237, 84, 213, 33, 13, 173, 238, 253, 237, 255, 191, 0, 0, 0, 0, 78, 10, 255, 255, 0, 0, 0, 0, 78, 10, 84, 213, 0, 0, 0, 0, 78, 10, 255, 191, 33, 13, 173, 238, 78, 28, 255, 127, 33, 13, 173, 238, 78, 28, 84, 213, 33, 13, 173, 238, 78, 28, 255, 191, 255, 255, 0, 0, 254, 255, 255, 191, 255, 255, 0, 0, 254, 255, 84, 213, 255, 255, 0, 0, 254, 255, 255, 191, 221, 242, 173, 238, 253, 237, 255, 255, 221, 242, 173, 238, 253, 237, 84, 213, 221, 242, 173, 238, 253, 237, 255, 191, 255, 255, 0, 0, 78, 10, 255, 255, 255, 255, 0, 0, 78, 10, 84, 213, 255, 255, 0, 0, 78, 10, 255, 191, 221, 242, 173, 238, 78, 28, 255, 127, 221, 242, 173, 238, 78, 28, 84, 213, 221, 242, 173, 238, 78, 28, 255, 191, 0, 0, 173, 238, 254, 255, 255, 191, 0, 0, 173, 238, 254, 255, 84, 213, 0, 0, 173, 238, 254, 255, 255, 191, 0, 0, 173, 238, 78, 10, 255, 255, 0, 0, 173, 238, 78, 10, 84, 213, 0, 0, 173, 238, 78, 10, 255, 191, 255, 255, 173, 238, 78, 10, 255, 255, 255, 255, 173, 238, 78, 10, 84, 213, 255, 255, 173, 238, 78, 10, 255, 191, 255, 255, 173, 238, 254, 255, 255, 191, 255, 255, 173, 238, 254, 255, 84, 213, 255, 255, 173, 238, 254, 255, 255, 191, 33, 13, 142, 55, 253, 237, 255, 255, 33, 13, 142, 55, 253, 237, 84, 213, 33, 13, 142, 55, 253, 237, 255, 191, 33, 13, 142, 55, 78, 28, 255, 127, 33, 13, 142, 55, 78, 28, 84, 213, 33, 13, 142, 55, 78, 28, 255, 191, 221, 242, 142, 55, 78, 28, 255, 127, 221, 242, 142, 55, 78, 28, 84, 213, 221, 242, 142, 55, 78, 28, 255, 191, 221, 242, 142, 55, 253, 237, 255, 255, 221, 242, 142, 55, 253, 237, 84, 213, 221, 242, 142, 55, 253, 237, 255, 191, 95, 213, 229, 255, 68, 5, 155, 246, 95, 213, 229, 255, 68, 5, 111, 213, 95, 213, 229, 255, 68, 5, 111, 213, 212, 241, 229, 255, 68, 5, 155, 246, 212, 241, 229, 255, 68, 5, 111, 213, 212, 241, 229, 255, 68, 5, 111, 213, 95, 213, 190, 234, 0, 0, 155, 246, 95, 213, 190, 234, 0, 0, 84, 229, 95, 213, 190, 234, 0, 0, 111, 213, 212, 241, 190, 234, 0, 0, 155, 246, 212, 241, 190, 234, 0, 0, 84, 229, 212, 241, 190, 234, 0, 0, 111, 213, 95, 213, 198, 221, 41, 13, 84, 229, 95, 213, 198, 221, 41, 13, 133, 200, 95, 213, 198, 221, 41, 13, 111, 213, 212, 241, 198, 221, 41, 13, 84, 229, 212, 241, 198, 221, 41, 13, 133, 200, 212, 241, 198, 221, 41, 13, 111, 213, 95, 213, 232, 234, 144, 26, 239, 192, 95, 213, 232, 234, 144, 26, 133, 200, 95, 213, 232, 234, 144, 26, 111, 213, 212, 241, 232, 234, 144, 26, 239, 192, 212, 241, 232, 234, 144, 26, 133, 200, 212, 241, 232, 234, 144, 26, 111, 213, 95, 213, 255, 255, 175, 21, 239, 192, 95, 213, 255, 255, 175, 21, 111, 213, 95, 213, 255, 255, 175, 21, 111, 213, 212, 241, 255, 255, 175, 21, 239, 192, 212, 241, 255, 255, 175, 21, 111, 213, 212, 241, 255, 255, 175, 21, 111, 213, 42, 14, 229, 255, 68, 5, 155, 246, 42, 14, 229, 255, 68, 5, 111, 213, 42, 14, 229, 255, 68, 5, 111, 213, 159, 42, 229, 255, 68, 5, 155, 246, 159, 42, 229, 255, 68, 5, 111, 213, 159, 42, 229, 255, 68, 5, 111, 213, 42, 14, 190, 234, 0, 0, 155, 246, 42, 14, 190, 234, 0, 0, 84, 229, 42, 14, 190, 234, 0, 0, 111, 213, 159, 42, 190, 234, 0, 0, 155, 246, 159, 42, 190, 234, 0, 0, 84, 229, 159, 42, 190, 234, 0, 0, 111, 213, 42, 14, 198, 221, 41, 13, 84, 229, 42, 14, 198, 221, 41, 13, 133, 200, 42, 14, 198, 221, 41, 13, 111, 213, 159, 42, 198, 221, 41, 13, 84, 229, 159, 42, 198, 221, 41, 13, 133, 200, 159, 42, 198, 221, 41, 13, 111, 213, 42, 14, 232, 234, 144, 26, 239, 192, 42, 14, 232, 234, 144, 26, 133, 200, 42, 14, 232, 234, 144, 26, 111, 213, 159, 42, 232, 234, 144, 26, 239, 192, 159, 42, 232, 234, 144, 26, 133, 200, 159, 42, 232, 234, 144, 26, 111, 213, 42, 14, 255, 255, 175, 21, 239, 192, 42, 14, 255, 255, 175, 21, 111, 213, 42, 14, 255, 255, 175, 21, 111, 213, 159, 42, 255, 255, 175, 21, 239, 192, 159, 42, 255, 255, 175, 21, 111, 213, 159, 42, 255, 255, 175, 21, 111, 213, 255, 255, 255, 255, 84, 85, 84, 85, 255, 127, 255, 255, 255, 127, 254, 255, 84, 213, 170, 42, 255, 127, 0, 0, 255, 191, 255, 191, 84, 85, 84, 85, 255, 127, 255, 255, 255, 127, 255, 255, 84, 213, 170, 42, 255, 127, 0, 0, 255, 255, 255, 255, 84, 85, 84, 85, 255, 127, 0, 0, 255, 127, 254, 255, 84, 213, 170, 42, 255, 127, 255, 255, 255, 191, 255, 191, 84, 85, 84, 85, 255, 127, 0, 0, 255, 127, 255, 255, 84, 213, 170, 42, 255, 127, 255, 255, 255, 255, 255, 255, 84, 213, 170, 42, 255, 127, 254, 255, 255, 191, 255, 191, 84, 213, 170, 42, 255, 127, 255, 255, 255, 191, 255, 191, 84, 213, 170, 42, 255, 127, 0, 0, 255, 255, 255, 255, 84, 213, 170, 42, 255, 127, 0, 0, 255, 127, 254, 255, 170, 170, 170, 170, 255, 127, 0, 0, 255, 127, 255, 255, 170, 170, 170, 170, 255, 127, 0, 0, 255, 127, 255, 255, 169, 170, 170, 170, 255, 127, 255, 255, 255, 127, 254, 255, 169, 170, 170, 170, 255, 127, 255, 255, 222, 196, 32, 59, 68, 213, 186, 42, 117, 213, 68, 213, 222, 196, 32, 59, 68, 213, 186, 42, 186, 170, 117, 85, 222, 196, 32, 59, 252, 50, 2, 205, 117, 213, 68, 213, 222, 196, 32, 59, 252, 50, 2, 205, 186, 170, 117, 85, 252, 50, 2, 205, 158, 95, 158, 95, 117, 213, 68, 213, 252, 50, 2, 205, 158, 95, 158, 95, 186, 170, 117, 85, 10, 143, 10, 143, 158, 95, 158, 95, 117, 213, 68, 213, 10, 143, 10, 143, 158, 95, 158, 95, 186, 170, 117, 85, 10, 143, 10, 143, 68, 213, 186, 42, 117, 213, 68, 213, 10, 143, 10, 143, 68, 213, 186, 42, 186, 170, 117, 85, 222, 196, 32, 59, 68, 213, 186, 42, 117, 213, 68, 213, 222, 196, 32, 59, 68, 213, 186, 42, 186, 170, 117, 85, 222, 196, 32, 59, 252, 50, 2, 205, 117, 213, 68, 213, 222, 196, 32, 59, 252, 50, 2, 205, 186, 170, 117, 85, 252, 50, 2, 205, 158, 95, 158, 95, 117, 213, 68, 213, 252, 50, 2, 205, 158, 95, 158, 95, 186, 170, 117, 85, 10, 143, 10, 143, 158, 95, 158, 95, 117, 213, 68, 213, 10, 143, 10, 143, 158, 95, 158, 95, 186, 170, 117, 85, 10, 143, 10, 143, 68, 213, 186, 42, 117, 213, 68, 213, 10, 143, 10, 143, 68, 213, 186, 42, 186, 170, 117, 85)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_6d44i")

[sub_resource type="BoxShape3D" id="BoxShape3D_iun1m"]
size = Vector3(1, 0.228394, 0.651245)

[sub_resource type="ArrayMesh" id="ArrayMesh_prxqi"]
_surfaces = [{
"aabb": AABB(-0.475263, 0.477447, -0.352802, 0.950526, 0.291257, 0.656663),
"format": 34896613377,
"index_count": 60,
"index_data": PackedByteArray(1, 0, 2, 0, 3, 0, 1, 0, 0, 0, 2, 0, 4, 0, 7, 0, 5, 0, 4, 0, 6, 0, 7, 0, 2, 0, 9, 0, 11, 0, 2, 0, 0, 0, 9, 0, 1, 0, 10, 0, 8, 0, 1, 0, 3, 0, 10, 0, 3, 0, 11, 0, 10, 0, 3, 0, 2, 0, 11, 0, 0, 0, 8, 0, 9, 0, 0, 0, 1, 0, 8, 0, 5, 0, 8, 0, 4, 0, 5, 0, 9, 0, 8, 0, 4, 0, 10, 0, 6, 0, 4, 0, 8, 0, 10, 0, 6, 0, 11, 0, 7, 0, 6, 0, 10, 0, 11, 0, 7, 0, 9, 0, 5, 0, 7, 0, 11, 0, 9, 0),
"name": "Crates_and_Barrels_2",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray(0, 0, 73, 170, 254, 255, 0, 0, 0, 0, 0, 0, 215, 7, 0, 0, 255, 255, 73, 170, 254, 255, 0, 0, 255, 255, 0, 0, 215, 7, 0, 0, 94, 7, 182, 99, 136, 5, 0, 0, 94, 7, 255, 255, 69, 233, 0, 0, 160, 248, 182, 99, 136, 5, 0, 0, 160, 248, 255, 255, 69, 233, 0, 0, 0, 0, 23, 58, 0, 0, 0, 0, 0, 0, 97, 228, 38, 248, 0, 0, 255, 255, 23, 58, 0, 0, 0, 0, 255, 255, 97, 228, 38, 248, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_c5nvc"]
resource_name = "chest_model_Cube_008"
_surfaces = [{
"aabb": AABB(-0.475263, 0.477447, -0.352802, 0.950526, 0.291257, 0.656663),
"attribute_data": PackedByteArray(104, 43, 193, 128, 91, 254, 80, 255, 104, 43, 179, 255, 104, 7, 143, 188, 91, 254, 235, 128, 104, 43, 193, 128, 104, 43, 179, 255, 240, 128, 80, 255, 188, 51, 179, 255, 23, 119, 143, 188, 240, 128, 235, 128, 188, 51, 193, 128, 217, 16, 227, 137, 100, 9, 232, 130, 129, 24, 90, 247, 118, 18, 206, 245, 100, 9, 84, 253, 51, 101, 247, 246, 168, 109, 48, 138, 34, 110, 232, 130, 235, 26, 7, 137, 69, 111, 27, 246, 34, 110, 84, 253, 158, 103, 164, 136, 90, 11, 85, 128, 104, 7, 228, 195, 150, 17, 193, 253, 188, 51, 193, 128, 188, 51, 193, 128, 203, 12, 179, 254, 99, 107, 213, 253, 188, 51, 179, 255, 84, 115, 74, 129, 23, 119, 228, 195, 188, 20, 41, 130, 104, 43, 193, 128, 188, 51, 179, 255, 197, 116, 168, 255, 137, 110, 61, 130, 104, 43, 179, 255),
"format": 34896613399,
"index_count": 60,
"index_data": PackedByteArray(4, 0, 7, 0, 10, 0, 4, 0, 1, 0, 7, 0, 13, 0, 22, 0, 16, 0, 13, 0, 19, 0, 22, 0, 6, 0, 28, 0, 36, 0, 6, 0, 0, 0, 28, 0, 3, 0, 33, 0, 25, 0, 3, 0, 9, 0, 33, 0, 11, 0, 39, 0, 35, 0, 11, 0, 8, 0, 39, 0, 2, 0, 27, 0, 31, 0, 2, 0, 5, 0, 27, 0, 17, 0, 26, 0, 14, 0, 17, 0, 30, 0, 26, 0, 12, 0, 32, 0, 18, 0, 12, 0, 24, 0, 32, 0, 20, 0, 38, 0, 23, 0, 20, 0, 34, 0, 38, 0, 21, 0, 29, 0, 15, 0, 21, 0, 37, 0, 29, 0),
"material": SubResource("StandardMaterial3D_tkrvr"),
"name": "Crates_and_Barrels_2",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 40,
"vertex_data": PackedByteArray(0, 0, 73, 170, 254, 255, 225, 192, 0, 0, 73, 170, 254, 255, 255, 255, 0, 0, 73, 170, 254, 255, 151, 220, 0, 0, 0, 0, 215, 7, 245, 243, 0, 0, 0, 0, 215, 7, 255, 255, 0, 0, 0, 0, 215, 7, 151, 220, 255, 255, 73, 170, 254, 255, 225, 192, 255, 255, 73, 170, 254, 255, 255, 255, 255, 255, 73, 170, 254, 255, 151, 220, 255, 255, 0, 0, 215, 7, 245, 243, 255, 255, 0, 0, 215, 7, 255, 255, 255, 255, 0, 0, 215, 7, 151, 220, 94, 7, 182, 99, 136, 5, 34, 244, 94, 7, 182, 99, 136, 5, 9, 204, 94, 7, 182, 99, 136, 5, 117, 199, 94, 7, 255, 255, 69, 233, 239, 163, 94, 7, 255, 255, 69, 233, 9, 204, 94, 7, 255, 255, 69, 233, 125, 199, 160, 248, 182, 99, 136, 5, 34, 244, 160, 248, 182, 99, 136, 5, 9, 204, 160, 248, 182, 99, 136, 5, 189, 247, 160, 248, 255, 255, 69, 233, 239, 163, 160, 248, 255, 255, 69, 233, 9, 204, 160, 248, 255, 255, 69, 233, 154, 247, 0, 0, 23, 58, 0, 0, 34, 244, 0, 0, 23, 58, 0, 0, 245, 243, 0, 0, 23, 58, 0, 0, 117, 199, 0, 0, 23, 58, 0, 0, 151, 220, 0, 0, 97, 228, 38, 248, 225, 192, 0, 0, 97, 228, 38, 248, 239, 163, 0, 0, 97, 228, 38, 248, 124, 199, 0, 0, 97, 228, 38, 248, 151, 220, 255, 255, 23, 58, 0, 0, 34, 244, 255, 255, 23, 58, 0, 0, 245, 243, 255, 255, 23, 58, 0, 0, 187, 247, 255, 255, 23, 58, 0, 0, 151, 220, 255, 255, 97, 228, 38, 248, 225, 192, 255, 255, 97, 228, 38, 248, 239, 163, 255, 255, 97, 228, 38, 248, 152, 247, 255, 255, 97, 228, 38, 248, 151, 220, 81, 241, 173, 14, 255, 127, 133, 73, 101, 221, 76, 209, 0, 0, 255, 127, 255, 127, 133, 73, 101, 221, 76, 209, 81, 241, 173, 14, 255, 127, 133, 73, 178, 174, 101, 93, 0, 0, 255, 127, 255, 127, 133, 73, 178, 174, 101, 93, 226, 255, 222, 127, 255, 255, 255, 127, 5, 163, 25, 209, 166, 255, 234, 126, 255, 255, 255, 127, 203, 162, 37, 209, 163, 255, 150, 127, 255, 255, 255, 127, 123, 182, 166, 151, 227, 255, 168, 127, 255, 255, 255, 127, 149, 182, 135, 151, 220, 255, 216, 127, 0, 0, 255, 127, 8, 163, 25, 209, 101, 221, 76, 209, 81, 241, 173, 14, 164, 255, 230, 126, 207, 162, 36, 209, 101, 221, 76, 209, 163, 255, 151, 127, 0, 0, 255, 127, 124, 182, 164, 151, 178, 174, 101, 93, 81, 241, 173, 14, 223, 255, 157, 127, 150, 182, 134, 151, 178, 174, 101, 93)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_prxqi")

[sub_resource type="BoxShape3D" id="BoxShape3D_bpffp"]
size = Vector3(1, 0.0917358, 0.689453)

[sub_resource type="Animation" id="Animation_o4sc5"]
resource_name = "Open_Chest"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chest_model/Chest_1/Chest_1_lid:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.075964, -0.150062), Vector3(0, -0.0411675, -0.069102), Vector3(0, 0.133732, 0.149247), Vector3(0, 0.302389, 0.231701), Vector3(0, 0.665474, 0.292344)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("chest_model/Chest_1/Chest_1_lid:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.291051, 0, 0), Vector3(0.132629, 0, 0), Vector3(-0.342636, 0, 0), Vector3(-0.65948, 0, 0), Vector3(-1.29317, 0, 0)]
}

[sub_resource type="Animation" id="Animation_fslis"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chest_model/Chest_1/Chest_1_lid:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.075964, -0.150062)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("chest_model/Chest_1/Chest_1_lid:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.291051, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qim73"]
_data = {
"Open_Chest": SubResource("Animation_o4sc5"),
"RESET": SubResource("Animation_fslis")
}

[node name="Chest" type="RigidBody3D"]
collision_layer = 3
collision_mask = 2
script = ExtResource("1_hjfkk")
WeaponList = ["res://Scenes/Guns/Pickups/Remington_870_Pickup.tscn", "res://Scenes/Guns/Pickups/MP5_Pickup.tscn", "res://Scenes/Guns/Pickups/Remington_700_Pickup.tscn", "res://Scenes/Guns/Pickups/Thompson_pickup.tscn", "res://Scenes/Guns/Pickups/M14_Pickup.tscn"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.281672, 0)
shape = SubResource("BoxShape3D_2lsq1")

[node name="SpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.323865, 0.15551)

[node name="chest_model" type="Node3D" parent="."]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)

[node name="Chest_1" type="MeshInstance3D" parent="chest_model"]
mesh = SubResource("ArrayMesh_1m1fe")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="chest_model/Chest_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.96705e-08, 2.48353e-08)
collision_layer = 9
collision_mask = 9
collision_priority = 2.0
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="chest_model/Chest_1/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.124084, -6.10327e-05)
shape = SubResource("BoxShape3D_iun1m")

[node name="Chest_1_lid" type="MeshInstance3D" parent="chest_model/Chest_1"]
transform = Transform3D(1, 0, 0, 0, 0.957943, -0.286959, 0, 0.286959, 0.957943, 0, -0.075964, -0.150062)
mesh = SubResource("ArrayMesh_c5nvc")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="chest_model/Chest_1/Chest_1_lid"]
collision_layer = 10
collision_mask = 10
collision_priority = 2.0
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="chest_model/Chest_1/Chest_1_lid/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0.613732, -0.0263034)
shape = SubResource("BoxShape3D_bpffp")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qim73")
}
